# FinalProject-Part2

./: CMakeLists.txt  commonOperations.cpp  commonOperations.h  doctor.cpp  doctor.h  doctorOperations.cpp  doctorOperations.h  final_part2.cpp  final_part4.cpp  final_part5.cpp  functions.cpp  header.h  patient.cpp  patient.h  patientOperations.cpp  patientOperations.h  person.cpp  person.h  schedulerOperations.cpp  schedulerOperations.h
